# avatar-studio

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.wan22  README.md  avatar-studio  deploy_runpod.py  pyproject.toml  requirements.txt  runpod_handler.py  runpod_handler_wan22.py
.claude/: settings.json
.github/workflows/: build-push-wan22.yml  build-push.yml
src/: __init__.py  cli.py  config.py  generator.py
