[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avatar-studio"
version = "0.1.0"
description = "CLI tool for generating talking avatar videos with Infinite Talk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    "opencv-python>=4.9.0.80",
    "diffusers>=0.31.0",
    "transformers>=4.49.0",
    "click>=8.0.0",
    "loguru",
    "pydantic>=2.0.0",
]

[project.scripts]
avatar-studio = "src.cli:cli"
